--- a/css/layout.css
+++ b/css/layout.css
@@ -7,6 +7,20 @@
     align-items: center;
 }
 
+.bg-image {
+    position: relative;
+    background-image: url('/asset/470604032_1350617479651386_4035148758104355332_n.jpg');
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    height: 400px;
+    filter: blur(1px) grayscale(40%); /* Apply the blur */
+    z-index: -1; /* Push the background behind everything */
+
+}
+
+  
+
 a {
     color: antiquewhite;
     text-decoration-line: none;
@@ -19,9 +33,15 @@ a {
 }
 
 .intro{
+
+    position: relative; /* Ensure it stacks properly */
+
     display: flex;
     flex-direction: row;
-  }
+    justify-content: center;
+    z-index: 1; /* Ensure it sits above the background */
+
+}
 
 #briefIntroduction{
     display: flex;
@@ -29,12 +49,16 @@ a {
 }
 
 #Info{
+
+    
     margin-left: 7px;
     padding: 10, 20, 10, 10;
     border-color: black;
     /* border: 1px solid blue; */
     width: 40%;
+    
 }
+
 
 body{
     margin: 1%;
